# MediaManagerClient

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: client.rs  config.rs  job.rs  main.rs
