[package]
name = "MediaManagerClient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
  "blocking",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
